databases.
[1899876] Fixed title/user import problem from v1.7 databases.
[1478022] Correct description of this fix in the Release Notes to avoid
user confusion thinking it does something different.
[] Ensure first entry is selected when opening an existing database.
[] XML export of password history fixed for when number to be saved > 99.

Changes to Existing Features in 3.12.01
=======================================
[] Improved compare database reporting.
[] If a field was empty e.g. user or notes, when the user requested it to be
copied to the clipboard, no action was performed.  Now a field will always be
copied whether it contains data or not.

New Features for 3.12.01
========================
[1914644] Password expiry can now be set as an interval (1 to 3650 days)
that will be applied from creation time and thereafter whenever the password
is changed. This is indicated in the List view by an asterisk after the 
expiry date.
[1904254] Search now selects all text fields by default.
[1901380] Find result highlighted and selected.
[1901380] If the Esc key is not being used to minimize PasswordSafe, then
it will close the Find Toolbar if active.
[1901380] F3 (Repeat Find) works even if the Find Toolbar has been closed.
[1664535] Interpret "Remember 0 last databases" on the System Options as 
"do not remember any opened database" in the configuration file or registry.
[1399569, 912188] Separate the clear clipboard options on minimize and exit.
[1207606] Option added to allow display of notes as tooltips in nested tree mode.
[988806] Feedback on double click now shown in the Status Bar - action and time.
[] Alt+F4, in addition to Ctrl+Q, now closes the application.
[] Allow user to Hide/Show main toolbar.
[] Ability to create/view a report of the previous Find request.

Bugs fixed in 3.12
==================
[1855658, 1436850] Implement font for password display correctly.
[1850271] Save after Compare no longer corrupts database.