@@ -64,6 +64,7 @@ PWScore::PWScore() : m_currfile(_T("")), m_changed(false),
     PWSrand::GetInstance()->GetRandomData(m_session_salt, sizeof(m_session_salt) );
   }
   m_lockFileHandle = INVALID_HANDLE_VALUE;
+  m_lockFileHandle2 = INVALID_HANDLE_VALUE;
   m_LockCount = 0;
 }
 
